--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -52,9 +52,11 @@ jobs:
     with:
       version: 3.2.0
   
-  download-artifacts:
+  push-binaries:
     needs: [build-sdl, build-ttf, build-mixer, build-image]
     runs-on: ubuntu-latest
+    permissions:
+        pull-requests: write
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v5
