Add a workflow cancellation mechanism

--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -27,6 +27,10 @@ on:
 #   mixer-version: main
 #   image-version: 3.2.0
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-sdl:
     name: SDL
