--- a/.github/workflows/build-sdl-image.yml
+++ b/.github/workflows/build-sdl-image.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-image-windows-${{ matrix.arch }}
-            path: SDL3_image.zip
+            path: SDL3_image-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
 
   build-linux:
     name: Build Linux
