--- a/.github/workflows/build-sdl-ttf.yml
+++ b/.github/workflows/build-sdl-ttf.yml
@@ -18,12 +18,14 @@ jobs:
           arch: [x64, x86, arm64]
     steps:
       - name: Download release build
-        run: wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-${{ inputs.version }}/SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
+        run: |
+          wget https://github.com/libsdl-org/SDL_ttf/releases/download/release-${{ inputs.version }}/SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
+          unzip SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip SDL3_ttf.dll
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-ttf-windows-${{ matrix.arch }}
-            path: SDL3_ttf-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
+            path: SDL3_ttf.dll
 
   build-linux:
     name: Build Linux
@@ -142,4 +144,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-ttf-apple-macOS-${{ matrix.arch }}
-            path: SDL_ttf/build/*
+            path: SDL_ttf/build/*.dylib
