--- a/.github/workflows/build-sdl.yml
+++ b/.github/workflows/build-sdl.yml
@@ -59,14 +59,14 @@ jobs:
 
   build-macos:
     name: Build for Apple
-    runs-on: macos-14
+    runs-on: macos-latest
     defaults:
       run:
         working-directory: SDL
     strategy:
       fail-fast: false
       matrix:
-          target: [iOS, '']
+          arch: [arm64, x86_64] # target: [iOS, '']
     steps:
       - name: Clone SDL3
         working-directory: .
@@ -79,8 +79,7 @@ jobs:
         run: >
           cmake -G "Xcode"
           -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED=NO
-          -DCMAKE_SYSTEM_NAME=${{ matrix.target }}
-          -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
+          -DCMAKE_OSX_ARCHITECTURES="${{ matrix.arch }}"
           -DCMAKE_BUILD_TYPE=Release
           -DSDL_SHARED=ON
           -DSDL_STATIC=OFF
@@ -93,5 +92,5 @@ jobs:
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
-            name: sdl-apple-${{ matrix.target }}
+            name: sdl-apple-macOS-${{ matrix.arch }}
             path: SDL/build/*.dylib
