--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -89,14 +89,27 @@ jobs:
         mv ./artifacts/sdl-mixer-linux/libSDL3_mixer.so.0 ./bin/binmix/assets/mix.so
     - name: Extract MacOS binaries
       run: |
-        mv ./artifacts/sdl-apple-macOS-x86_64/libSDL3.dylib ./bin/binsdl/assets/sdl_amd64.dylib
-        mv ./artifacts/sdl-apple-macOS-arm64/libSDL3.dylib ./bin/binsdl/assets/sdl_arm64.dylib
+        mv ./artifacts/sdl-apple-macOS-x86_64/libSDL3.0.dylib ./bin/binsdl/assets/sdl_amd64.dylib
+        mv ./artifacts/sdl-apple-macOS-arm64/libSDL3.0.dylib ./bin/binsdl/assets/sdl_arm64.dylib
         mv ./artifacts/sdl-ttf-apple-macOS-x86_64/libSDL3_ttf.dylib ./bin/binttf/assets/ttf_amd64.dylib
         mv ./artifacts/sdl-ttf-apple-macOS-arm64/libSDL3_ttf.dylib ./bin/binttf/assets/ttf_arm64.dylib
         mv ./artifacts/sdl-image-apple-macOS-x86_64/libSDL3_image.dylib ./bin/binimg/assets/img_amd64.dylib
         mv ./artifacts/sdl-image-apple-macOS-arm64/libSDL3_image.dylib ./bin/binimg/assets/img_arm64.dylib
         mv ./artifacts/sdl-mixer-apple-macOS-x86_64/libSDL3_mixer.dylib ./bin/binmix/assets/mix_amd64.dylib
         mv ./artifacts/sdl-mixer-apple-macOS-arm64/libSDL3_mixer.dylib ./bin/binmix/assets/mix_arm64.dylib
+    
+    - name: Strip linux binaries
+      run: |
+        strip $(echo ./bin/binsdl/assets/*.so)
+        strip $(echo ./bin/binttf/assets/*.so)
+        strip $(echo ./bin/binimg/assets/*.so)
+        strip $(echo ./bin/binmix/assets/*.so)
+    - name: Compress binaries
+      run: |
+        gzip -f $(echo ./bin/binsdl/assets/*)
+        gzip -f $(echo ./bin/binttf/assets/*)
+        gzip -f $(echo ./bin/binimg/assets/*)
+        gzip -f $(echo ./bin/binmix/assets/*)
     
     - name: Push changes & PR
       env:
