--- a/.github/workflows/build-sdl.yml
+++ b/.github/workflows/build-sdl.yml
@@ -18,7 +18,14 @@ jobs:
           arch: [x64, x86, arm64]
 
     steps:
+      - name: Cache
+        uses: actions/cache@v4
+        id: cache-windows
+        with:
+          path: SDL3.dll
+          key: sdl-windows-${{ inputs.version }}-${{ matrix.arch }}
       - name: Download release build
+        if: steps.cache-windows.outputs.cache-hit != 'true'
         run: |
           wget https://github.com/libsdl-org/SDL/releases/download/release-${{ inputs.version }}/SDL3-${{ inputs.version }}-win32-${{ matrix.arch }}.zip
           unzip SDL3-${{ inputs.version }}-win32-${{ matrix.arch }}.zip SDL3.dll
