--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -60,6 +60,7 @@ jobs:
     needs: [build-sdl, build-ttf, build-mixer, build-image]
     runs-on: ubuntu-latest
     permissions:
+        contents: write
         pull-requests: write
     steps:
     - name: Checkout
@@ -72,6 +73,14 @@ jobs:
         merge-multiple: false
     - name: List artifacts
       run: ls -lR ./artifacts
+
+    - name: Delete previous binaries
+      run: |
+        rm ./bin/binsdl/assets/*
+        rm ./bin/binttf/assets/*
+        rm ./bin/binimg/assets/*
+        rm ./bin/binmix/assets/*
+
     - name: Extract Windows binaries
       run: |
         mv ./artifacts/sdl-windows-x64/SDL3.dll ./bin/binsdl/assets/sdl_amd64.dll
@@ -115,9 +124,11 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git checkout -b binaries-update
         git status
         git add ./bin
         git commit -m "Bump binaries version"
         git push origin --set-upstream binaries-update
-        gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body 'Test'
+        gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body '- SDL version: xyz\n- SDL_ttf: yuw\n'
