--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -65,6 +65,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v5
+      with:
+        ref: main
     - name: Download artifacts
       uses: actions/download-artifact@v5
       with:
@@ -131,4 +133,4 @@ jobs:
         git add ./bin
         git commit -m "Bump binaries version"
         git push origin --set-upstream binaries-update
-        gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body '- SDL version: xyz\n- SDL_ttf: yuw\n'
+        gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body $'- SDL version: xyz\n- SDL_ttf: yuw\n' || echo "PR already exists"
