--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -133,5 +133,5 @@ jobs:
         git status
         git add ./bin
         git commit -m "Bump binaries version"
-        git push origin --set-upstream binaries-update
+        git push origin --set-upstream binaries-update || git push
         gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body $'- SDL version: xyz\n- SDL_ttf: yuw\n' || gh pr edit binaries-update --body $'- SDL version: 123\n- SDL_ttf: 456\n'
