Fixed remote tracking

--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -129,9 +129,10 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git checkout -b binaries-update
+        git branch --set-upstream-to=origin/binaries-update binaries-update
         git pull
         git status
         git add ./bin
-        git commit -m "Bump binaries version"
-        git push origin --set-upstream binaries-update || git push
+        git commit -m "Bump binaries version" 
+        git push
         gh pr create -B main -H binaries-update --title 'Update embedded SDL libraries' --body $'- SDL version: xyz\n- SDL_ttf: yuw\n' || gh pr edit binaries-update --body $'- SDL version: 123\n- SDL_ttf: 456\n'
