--- a/.github/workflows/build-sdl-mixer.yml
+++ b/.github/workflows/build-sdl-mixer.yml
@@ -101,7 +101,7 @@ jobs:
             path: SDL_mixer/build/*.so.0
 
   build-macos:
-    name: Build for Apple (${{ matrix.platform.arch }})
+    name: Build MacOS (${{ matrix.platform.arch }})
     runs-on: macos-latest
     strategy:
       fail-fast: false
