--- a/.github/workflows/build-sdl.yml
+++ b/.github/workflows/build-sdl.yml
@@ -65,7 +65,7 @@ jobs:
             path: SDL/build/*.so.0
 
   build-macos:
-    name: Build for Apple
+    name: Build MacOS (${{ matrix.arch }})
     runs-on: macos-latest
     strategy:
       fail-fast: false
