--- a/.github/workflows/build-sdl-binaries.yml
+++ b/.github/workflows/build-sdl-binaries.yml
@@ -80,8 +80,7 @@ jobs:
       run: |
         git checkout -b binaries-update
         git fetch
-        git branch --set-upstream-to=origin/binaries-update binaries-update || echo "No remote branch"
-        git pull
+        (git branch --set-upstream-to=origin/binaries-update binaries-update && git pull) || echo "No remote branch"
         rm ./bin/binsdl/assets/*
         rm ./bin/binttf/assets/*
         rm ./bin/binimg/assets/*
