--- a/.github/workflows/build-sdl-ttf.yml
+++ b/.github/workflows/build-sdl-ttf.yml
@@ -146,7 +146,7 @@ jobs:
           -DCMAKE_INSTALL_PREFIX=prefix_cmake
           -S . -B build
       - name: Build
-        run: cmake --build build --config Release --verbose
+        run: cmake --build build --config Release
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with: 
