--- a/.github/workflows/build-sdl-mixer.yml
+++ b/.github/workflows/build-sdl-mixer.yml
@@ -1,7 +1,13 @@
 name: Build SDL_mixer
 
 on:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      version:
+        # TODO: ignored atm
+        description: "SDL_mixer version"
+        required: true
+        type: string
 
 env:
   MIXER_BRANCH: main
@@ -95,7 +101,7 @@ jobs:
             path: SDL_mixer/build/*.so.0
 
   build-macos:
-    name: Build for Apple (${{ matrix.platform.arch }})
+    name: Build MacOS (${{ matrix.platform.arch }})
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -168,4 +174,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with: 
             name: sdl-mixer-apple-macOS-${{ matrix.platform.arch }}
-            path: SDL_mixer/build/*
+            path: SDL_mixer/build/*.dylib
