Add tests for init and version of embedded libraries + few fixes

--- a/.github/workflows/diff-check.yml
+++ b/.github/workflows/diff-check.yml
@@ -26,6 +26,7 @@ jobs:
         - name: go fmt
           run: |
             task fmt
+            git diff --exit-code
 
         - name: Coverage
           run: |
