--- a/.github/workflows/build-sdl-mixer.yml
+++ b/.github/workflows/build-sdl-mixer.yml
@@ -33,7 +33,7 @@ jobs:
   build-linux:
     name: Build Linux
     runs-on: ubuntu-latest
-    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
+    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:latest
     defaults:
       run:
         working-directory: SDL_mixer
