--- a/.github/workflows/build-sdl.yml
+++ b/.github/workflows/build-sdl.yml
@@ -38,7 +38,7 @@ jobs:
   build-linux:
     name: Build Linux
     runs-on: ubuntu-latest
-    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:beta
+    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:latest
     defaults:
       run:
         working-directory: SDL
@@ -49,6 +49,7 @@ jobs:
       - name: Configure
         run: >
           cmake -G Ninja
+          -DCMAKE_POSITION_INDEPENDENT_CODE=ON
           -DCMAKE_BUILD_TYPE=Release
           -DSDL_SHARED=ON
           -DSDL_STATIC=OFF
