--- a/.github/workflows/build-sdl-ttf.yml
+++ b/.github/workflows/build-sdl-ttf.yml
@@ -36,8 +36,8 @@ jobs:
 
   build-linux:
     name: Build Linux
-    runs-on: ubuntu-latest
-    container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:latest
+    runs-on: ubuntu-20.04
+    # container: registry.gitlab.steamos.cloud/steamrt/sniper/sdk:latest
     defaults:
       run:
         working-directory: SDL_ttf
